# malama

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  folderstructure.md
include/config/: config_manager.hpp
include/engine/markdown/: pipeline.hpp  syntax_registry.hpp
include/utils/: markdown_parser.hpp
src/: main.cpp
src/common/: constants.hpp  types.hpp
src/config/: config_manager.cpp
src/core/: config_manager.cpp  config_manager.hpp  i_config_manager.hpp  models.hpp  owner.hpp
src/engine/markdown/: pipeline.cpp  syntax_registry.cpp
src/engine/storage/: history_manager.cpp  history_manager.hpp
src/network/: i_ollama_client.hpp  ollama_chunks.hpp  ollama_client.cpp  ollama_client.hpp  ollama_requests.hpp  stream_worker.cpp  stream_worker.hpp
src/ui/: chat_panel.cpp  chat_panel.hpp  main_frame.cpp  main_frame.hpp  settings_dialog.cpp  settings_dialog.hpp  sidebar_panel.cpp  sidebar_panel.hpp
tests/: CMakeLists.txt  main_test.cpp  test_network_ui.cpp
tests/integration/distro_matrix/: arch.dockerfile  fedora.dockerfile  run_matrix.sh  test_run_matrix.sh  ubuntu.dockerfile
